# sagan

./: .gitignore  README.md  flake.nix
code/: sagan.py
libs/: publish.sh
libs/pset/: lib.typ  typst.toml
libs/type/: lib.typ  typst.toml
note/: Modern Physics.org
work/: ECEN100 - HW2_251016_233223.pdf.sagan.md  EvanStokdyk11_English3_ImFrom.org  Im From.org  Modern Physics.org  Spanish.org  arm-mk  collatz_conjecture.cpp  csci163-hw3.org
work/Assets/: The Big Sleep (Book).org  college-journal-11.org
work/English/: English11th_IndigonousVideoReaction.txt
work/History/: North West Native Culture.org
work/Writings/: A Deal for Two (Story).org  Famine & Fasting.org  (+7 more)
work/csen060/: CMakeLists.txt  justfile
work/csen060/src/: as_int.cpp  as_int.h  lab05.cpp  main.cpp  node.cpp  node.h
work/csen060/src/hw1/: sol2.cpp
work/csen060/src/hw2/: output1.txt  sol2.cpp
work/csen060/src/hw3/: line.cpp  line.h
work/csen060/src/hw4/: speller.cpp
work/csen060/src/hw5/: biguint.cpp  biguint.h  slice.h  util.h
work/csen060/src/hw6/: Biguint.cpp  Biguint.h  cslice.h  util.h
work/csen060/src/hw7/: p1.cpp  p2.cpp  p3.cpp
work/csen060/src/hw8/: BIGUINT.cpp  BIGUINT.h
work/csen060/src/hw9/: Bigint.cpp  Bigint.h  Biguint.cpp  test.cpp
work/csen060/src/lab02/: sol1.cpp  sol2.cpp
work/csen060/src/lab03/: sol1.cpp  sol2.md
work/csen060/src/lab04/: point.cpp  triangle.cpp
work/csen060/src/lab07/: explain.cpp  explain.md
work/csen060/src/lab08/: p1.cpp
work/csen060/src/lab09/: dnode.cpp  dnode.h  test.cpp
work/csen060/src/lab10/: park.rs  test.cpp
(+308 files in other folders)
